--- a/sass/_infra.scss
+++ b/sass/_infra.scss
@@ -4,13 +4,13 @@
   margin-bottom: 20px;
 }
 .infra__item{
-  height: 412px;
+  height: 420px;
   width: 100%;
   position: relative;
   border-radius: 6px;
   margin-bottom: 16px;
 }
-.infra__name{
+.section__name{
   width: 30%;
   font-size: 30px;
   padding: 30px;
@@ -40,12 +40,13 @@
     border-radius: 0 4px 0 0;
   }
   .smile_line{
+    width: 90px;
     display: block;
     margin: 20px 0 0;
   }
 }
 .infra__item:nth-child(even){
-  .infra__name{
+  .section__name{
     margin-right: 0;
     margin-left: auto;
   &:before{
@@ -60,37 +61,40 @@
   }
 }
 .infra__item__1{
-  background: url('/img/infra_bg.jpg') center no-repeat;
+  background: url('/img/infra/1.jpg') center no-repeat;
   background-size: cover;
   margin-top: 0;
-  .infra__name{
+  .section__name{
     top:200px;
   }
 }
 .infra__item__2{
-  background: url('/img/day/img6.jpg') center no-repeat;
+  background: url('/img/infra/2.jpg') center no-repeat;
   background-size: cover;
 }
 .infra__item__3{
-  background: url('/img/day/img5.jpg') center no-repeat;
+  background: url('/img/infra/3.jpg') center no-repeat;
   background-size: cover;
 }
 .infra__item__4{
-  background: url('/img/render3.jpg') center no-repeat;
+  background: url('/img/infra/4.jpg') center no-repeat;
   background-size: cover;
 }
 .infra__item__5{
-  background: url('/img/infra/mama_bg.jpg') center no-repeat;
+  background: url('/img/infra/5.jpg') center top no-repeat;
   background-size: cover;
+  .section__name{
+    top:200px;
+  }
 }
 .infra__item__6{
-  background: url('/img/day/img3.jpg') center no-repeat;
+  background: url('/img/infra/6.jpg') center no-repeat;
   background-size: cover;
 }
 .infra__item__7{
-  background: url('/img/kolyaska.jpg') center no-repeat;
+  background: url('/img/infra/7.jpg') center bottom no-repeat;
   background-size: cover;
-  .infra__name{
+  .section__name{
     top:120px;
   }
 }
